--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="#">Cardápio</a></li>
 			<li><a href="#">Contato</a></li>
 		</ul>  
-			<img src="img/logo.png" alt="logo">
+			<img src="img/logo.jpeg" alt="logo">
 		</div>
         </nav>
         <div class="txt1">
