--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<i class="fas fa-bars"></i>
 		</label>
 		<ul>
-			<li><a class="active" href="file:///C:/Users/Arlete/Documents/Projeto%20Dev%C2%B4s/Jean/index.html">Início</a></li>
+			<li><a class="active" href="#">Início</a></li>
 			<li><a href="#">Sobre</a></li>
 			<li><a href="#">Cardápio</a></li>
 			<li><a href="#">Contato</a></li>
