--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="#">Cardápio</a></li>
 			<li><a href="#">Contato</a></li>
 		</ul>  
-			<img src="img/logo.jpeg" alt="logo">
+			<a href="https://agitated-borg-252d4a.netlify.app/"><img src="img/logo.jpeg" alt="logo"></a>
 		</div>
         </nav>
         <div class="txt1">
