--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="#">Cardápio</a></li>
 			<li><a href="#">Contato</a></li>
 		</ul>  
-			<a href="file:///C:/Users/Arlete/Documents/Projeto%20Dev%C2%B4s/Jean/index.html#"><img src="img/logo.jpeg" alt="logo"></a>
+			<a href="file:///C:/Users/Arlete/Documents/Projeto%20Dev%C2%B4s/Jean/index.html"><img src="img/logo.jpeg" alt="logo"></a>
 		</div>
         </nav>
         <div class="txt1">
