--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         
         <div class="txt3">
-            <p>"Somos uma pequena e dedicada equipe <br>nosso objetivo é simples cativar<br>as pessoas pelo nosso sabor e<br> profissionalismo dentro e fora da cozinha!<br>Da equipe Banzé Sushi"</p>
+            <p>"Somos uma pequena e dedicada equipe <br>nosso objetivo é simples cativar<br>as pessoas pelo nosso sabor e<br> profissionalismo dentro e fora da cozinha!<br>Da equipe Banzé Sushi🥢"</p>
         </div>
 
        
