--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         </div>
 
         <img class="moto" src="img/moto.gif" width="100px">
+	
+	
+         <div class="txt4">
+            <h3>Sugestões do chef</h3>
+        </div>
+
 
         
             
