--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             &nbsp;
                         </div>
                         <h1 class="menu-title">Hot Philadelphia</h1>
-                        <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
+                        <p class="menu-p"></p>
                         <h3 class="price">$23</h3>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                         <div class="menu-img2">
                             &nbsp;
                         </div>
-                        <h1 class="menu-title"></h1>
+                        <h1 class="menu-title">Urumaki Filadélfia</h1>
                         <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
                         <h3 class="price">$23</h3>
                     </div>
@@ -82,7 +82,7 @@
                         <div class="menu-img3">
                             &nbsp;
                         </div>
-                        <h1 class="menu-title"></h1>
+                        <h1 class="menu-title">Joe de Salmão</h1>
                         <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
                         <h3 class="price">$23</h3>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="menu-img4">
                             &nbsp;
                         </div>
-                        <h1 class="menu-title"></h1>
+                        <h1 class="menu-title">Sushi de Salmão</h1>
                         <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
                         <h3 class="price">$23</h3>
                     </div>
@@ -102,7 +102,7 @@
                         <div class="menu-img5">
                             &nbsp;
                         </div>
-                        <h1 class="menu-title"></h1>
+                        <h1 class="menu-title">Tartar de Salmão</h1>
                         <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
                         <h3 class="price">$23</h3>
                     </div>
@@ -112,7 +112,7 @@
                         <div class="menu-img6">
                             &nbsp;
                         </div>
-                        <h1 class="menu-title"></h1>
+                        <h1 class="menu-title">Sashimi</h1>
                         <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
                         <h3 class="price">$23</h3>
                     </div>
@@ -122,7 +122,7 @@
                         <div class="menu-img7">
                             &nbsp;
                         </div>
-                        <h1 class="menu-title"></h1>
+                        <h1 class="menu-title">Joe de Camarão</h1>
                         <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
                         <h3 class="price">$23</h3>
                     </div>
