--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="txt3">
-            <p>"Somos uma pequena e dedicada equipe,<br>nosso objetivo é simples cativar<br>as pessoas pelo nosso sabor e<br> profissionalismo dentro e fora da cozinha!<br>Da equipe Banzé Sushi🥢"</p>
+            <p>"Somos uma pequena e dedicada equipe,<br>nosso objetivo é simples, cativar<br>as pessoas pelo nosso sabor e<br>profissionalismo dentro e fora da cozinha!<br>Não importa qual seja a sua escolha, nosso cardápio foi criado para encantar você, seu paladar e seu coração.<br>É amor à primeira vista!<br>Da equipe Banzé Sushi🥢"</p>
         </div>
 
         <img class="moto" src="img/moto.gif" width="100px">
@@ -63,7 +63,7 @@
                             &nbsp;
                         </div>
                         <h1 class="menu-title">Hot Philadelphia</h1>
-                        <p class="menu-p"></p>
+                        <p class="menu-p">O hot philadelfia é um delicioso enrolado de arroz com alga, com recheio de salmão, cream cheese e cebolinha, empanado e frito.</p>
                         <h3 class="price">$23</h3>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                             &nbsp;
                         </div>
                         <h1 class="menu-title">Urumaki Filadélfia</h1>
-                        <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
+                        <p class="menu-p">Tem a aparencia de um hossomaki, mas vem enrolado no arroz e fica com a alga por dentro.</p>
                         <h3 class="price">$23</h3>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                             &nbsp;
                         </div>
                         <h1 class="menu-title">Joe de Salmão</h1>
-                        <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
+                        <p class="menu-p">O joe de salmão é um tipo de sushi que ao invés de ser enrolado em nori, leva uma tira de salmão na parte de fora.</p>
                         <h3 class="price">$23</h3>
                     </div>
                 </div>
@@ -92,8 +92,8 @@
                         <div class="menu-img4">
                             &nbsp;
                         </div>
-                        <h1 class="menu-title">Sushi de Salmão</h1>
-                        <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
+                        <h1 class="menu-title">Niguiri</h1>
+                        <p class="menu-p">O niguiri consiste em dois ingredientes, peixe e um arroz especial feito com vinagre.</p>
                         <h3 class="price">$23</h3>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             &nbsp;
                         </div>
                         <h1 class="menu-title">Tartar de Salmão</h1>
-                        <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
+                        <p class="menu-p">O tatar de salmão consiste em uma carne crua cortada bem temperada e cortada em pedaços muito pequenos com a ponta da faca.</p>
                         <h3 class="price">$23</h3>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                             &nbsp;
                         </div>
                         <h1 class="menu-title">Sashimi</h1>
-                        <p class="menu-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloribus, ea veniam velit sed harum qui perferendis debitis cumque obcaecati.</p>
+                        <p class="menu-p">O Sashimi é um dos pratos mais simples da culinaria japonesa, composto por uma fatia grossa de peixe cru e acompanhada com molho shoyu.</p>
                         <h3 class="price">$23</h3>
                     </div>
                 </div>
