--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         
 
         <div class="txt1">
-            <h1>Culinária<br>Japonesa</h1>
+            <h1>Culinaria<br>Japonesa</h1>
         </div>
         
         <div class="txt2">  
-            <h2>Banzé Sushi</h2>
+            <h2>Banze Sushi</h2>
         </div>
 
         <div class="container">
