--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <img class="moto" src="img/moto.gif" width="100px">
 
          <div class="txt4">
-            <h3>Sugestões do chef</h3>
+            <h3>Sugestoes</h3>
         </div>
 
 
