--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Banzé Sushi</title>
-    <link rel="shortcut icon" href="img/clone.png" type="image/gif"/>
-    <link rel="apple-touch-icon-precomposed" href="img/clone.png">
+    <link rel="shortcut icon" href="img/clone.png" type="image/gif"/
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
