--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><a href="#contact-background">Contato</a></li>
       </ul>
       <div id="logo">
-        <a href="http://127.0.0.1:5500/Banze-Sushi-Website-main/index.html" target="_self"><img class="logo" src="img/logo.jpeg" alt="logo" /></a>
+        <a href="https://banzesushi.netlify.app" target="_self"><img class="logo" src="img/logo.jpeg" alt="logo" /></a>
       </div>
     </nav>
 
