--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Banzé Sushi</title>
     <link rel="sortcut icon" href="img/clone.png" type="image/gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta 
+     name='viewport' 
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
+/>
     <link rel="stylesheet" type="text/js" href="app.js" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link
