--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <h1 class="contato">Contato</h1>
       <h2 class="contato2">entre em contato conosco</h2>
 
-      <a href="mailto:banzesushi@gmail.com"
+      <a href="mailto:banzeinga2@outlook.com"
         ><img class="gmail" src="img/gmail.png"
       /></a>
       <a href="https://www.instagram.com/banze_sushi/"
