--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Banzé Sushi</title>
-    <link rel="sortcut icon" href="img/clone.png" type="image/gif" />
+    <link rel="shortcut icon" href="img/clone.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta 
      name='viewport' 
