--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="#contact-background">Contato</a></li>
       </ul>
       <div id="logo">
-        <a href="https://banzesushi.netlify.app" target="_self"><img class="logo" src="img/logo.jpeg" alt="logo" /></a>
+        <a href="http://banzesushi.cf" target="_self"><img class="logo" src="img/logo.jpeg" alt="logo" /></a>
       </div>
     </nav>
 
