--- a/index.html
+++ b/index.html
@@ -154,13 +154,16 @@
       <h2 class="contato2">entre em contato conosco</h2>
 
       <a href="mailto:banzeinga2@outlook.com"
+          target="_blank"
         ><img class="gmail" src="img/gmail.png"
       /></a>
       <a href="https://www.instagram.com/banze_sushi/"
+          target="_blank"
         ><img class="insta" src="img/instagram.png"
       /></a>
       <a
         href="https://wa.me/5521960152622"
+          target="_blank"
         ><img class="face" src="img/whatsapp.png"
       /></a>
     </div>
