--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Banzé Sushi</title>
     <link rel="shortcut icon" href="img/clone.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta author="Danilo Medeiros">
+    <meta description="O sushi que você tanto ama! ❤">
     <meta 
      name='viewport' 
      content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
