--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta author="Danilo Medeiros">
     <meta description="O sushi que você tanto ama! ❤">
+    <meta name="google-site-verification" content="YX9DV3rWoQtMjPknBuTW0d00ZNcmAUZekKCwNEx35v8" />
     <meta 
      name='viewport' 
      content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
