--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <title>Banzé Sushi</title>
     <link rel="shortcut icon" href="img/clone.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta author="Danilo Medeiros">
-    <meta description="O sushi que você tanto ama! ❤">
-    <meta name="google-site-verification" content="YX9DV3rWoQtMjPknBuTW0d00ZNcmAUZekKCwNEx35v8" />
-    <meta 
-     name='viewport' 
-     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
-/>
+    <meta author="Danilo Medeiros" />
+    <meta description="O sushi que você tanto ama! ❤" />
+    <meta
+      name="google-site-verification"
+      content="YX9DV3rWoQtMjPknBuTW0d00ZNcmAUZekKCwNEx35v8"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <link rel="stylesheet" type="text/js" href="app.js" />
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
@@ -41,16 +45,18 @@
         <li><a href="#txt4">Sugestões</a></li>
         <li><a href="#contact-background">Contato</a></li>
       </ul>
-      <div id="logo">
-        <a href="http://banzesushi.cf" target="_self"><img class="logo" src="img/logo.jpeg" alt="logo" /></a>
+      <div id="logo" data-aos="fade-up">
+        <a href="http://banzesushi.cf" target="_self"
+          ><img class="logo" src="img/logo.jpeg" alt="logo"
+        /></a>
       </div>
     </nav>
 
-    <div id="txt1">
+    <div id="txt1" data-aos="fade-up">
       <h1>Culinaria<br />Japonesa</h1>
     </div>
 
-    <div id="txt3">
+    <div id="txt3" data-aos="fade-up">
       <p>
         "Somos uma pequena e dedicada equipe,<br />nosso objetivo é simples,
         cativar<br />as pessoas pelo nosso sabor e<br />profissionalismo dentro
@@ -62,74 +68,74 @@
 
     <img class="moto" src="img/moto.gif" width="100px" />
 
-    <div id="txt4">
+    <div id="txt4" data-aos="fade-down">
       <h3>Sugestoes do chef</h3>
     </div>
 
-    <section class="menu">
-      <div class="container">
-        <div class="menu-grid">
-          <div class="menu-hold">
-            <div class="menu-container">
-              <div class="menu-img">&nbsp;</div>
-              <h1 class="menu-title">Hot Philadelphia</h1>
-              <p class="menu-p">
+    <section class="menu" data-aos="fade-up">
+      <div class="container" data-aos="fade-up">
+        <div class="menu-grid" data-aos="fade-up">
+          <div class="menu-hold" data-aos="fade-up">
+            <div class="menu-container" data-aos="fade-up">
+              <div class="menu-img" data-aos="fade-up">&nbsp;</div>
+              <h1 class="menu-title" data-aos="fade-up">Hot Philadelphia</h1>
+              <p class="menu-p" data-aos="fade-up">
                 O hot philadelfia é um delicioso enrolado de arroz com alga, com
                 recheio de salmão, cream cheese e cebolinha, empanado e frito.
               </p>
-              <h3 class="price">$23</h3>
+              <h3 class="price" data-aos="fade-up">$23</h3>
             </div>
           </div>
-          <div class="menu-hold">
-            <div class="menu-container">
-              <div class="menu-img2">&nbsp;</div>
-              <h1 class="menu-title">Urumaki Filadélfia</h1>
-              <p class="menu-p">
+          <div class="menu-hold" data-aos="fade-up">
+            <div class="menu-container" data-aos="fade-up">
+              <div class="menu-img2" data-aos="fade-up">&nbsp;</div>
+              <h1 class="menu-title" data-aos="fade-up">Urumaki Filadélfia</h1>
+              <p class="menu-p" data-aos="fade-up">
                 Tem a aparencia de um hossomaki, mas vem enrolado no arroz e
                 fica com a alga por dentro.
               </p>
-              <h3 class="price">$23</h3>
+              <h3 class="price" data-aos="fade-up">$23</h3>
             </div>
           </div>
-          <div class="menu-hold">
-            <div class="menu-container">
-              <div class="menu-img3">&nbsp;</div>
-              <h1 class="menu-title">Joe de Salmão</h1>
-              <p class="menu-p">
+          <div class="menu-hold" data-aos="fade-up">
+            <div class="menu-container" data-aos="fade-up">
+              <div class="menu-img3" data-aos="fade-up">&nbsp;</div>
+              <h1 class="menu-title" data-aos="fade-up">Joe de Salmão</h1>
+              <p class="menu-p" data-aos="fade-up">
                 O joe de salmão é um tipo de sushi que ao invés de ser enrolado
                 em nori, leva uma tira de salmão na parte de fora.
               </p>
-              <h3 class="price">$23</h3>
+              <h3 class="price" data-aos="fade-up">$23</h3>
             </div>
           </div>
-          <div class="menu-hold">
-            <div class="menu-container">
-              <div class="menu-img4">&nbsp;</div>
-              <h1 class="menu-title">Niguiri</h1>
-              <p class="menu-p">
+          <div class="menu-hold" data-aos="fade-up">
+            <div class="menu-container" data-aos="fade-up">
+              <div class="menu-img4" data-aos="fade-up">&nbsp;</div>
+              <h1 class="menu-title" data-aos="fade-up">Niguiri</h1>
+              <p class="menu-p" data-aos="fade-up">
                 O niguiri consiste em dois ingredientes, peixe e um arroz
                 especial feito com vinagre.
               </p>
-              <h3 class="price">$23</h3>
+              <h3 class="price" data-aos="fade-up">$23</h3>
             </div>
           </div>
-          <div class="menu-hold">
-            <div class="menu-container">
-              <div class="menu-img5">&nbsp;</div>
-              <h1 class="menu-title">Tartar de Salmão</h1>
-              <p class="menu-p">
+          <div class="menu-hold" data-aos="fade-up">
+            <div class="menu-container" data-aos="fade-up">
+              <div class="menu-img5" data-aos="fade-up">&nbsp;</div>
+              <h1 class="menu-title" data-aos="fade-up">Tartar de Salmão</h1>
+              <p class="menu-p" data-aos="fade-up">
                 O tatar de salmão consiste em uma carne crua cortada bem
                 temperada e cortada em pedaços muito pequenos com a ponta da
                 faca.
               </p>
-              <h3 class="price">$23</h3>
+              <h3 class="price" data-aos="fade-up">$23</h3>
             </div>
           </div>
-          <div class="menu-hold">
-            <div class="menu-container">
-              <div class="menu-img6">&nbsp;</div>
-              <h1 class="menu-title">Sashimi</h1>
-              <p class="menu-p">
+          <div class="menu-hold" data-aos="fade-up">
+            <div class="menu-container" data-aos="fade-up">
+              <div class="menu-img6" data-aos="fade-up">&nbsp;</div>
+              <h1 class="menu-title" data-aos="fade-up">Sashimi</h1>
+              <p class="menu-p" data-aos="fade-up">
                 O Sashimi é um dos pratos mais simples da culinaria japonesa,
                 composto por uma fatia grossa de peixe cru e acompanhada com
                 molho shoyu.
@@ -137,38 +143,42 @@
               <h3 class="price">$23</h3>
             </div>
           </div>
-          <div class="menu-hold">
-            <div class="menu-container">
-              <div class="menu-img7">&nbsp;</div>
-              <h1 class="menu-title">Joe de Camarão</h1>
-              <p class="menu-p">
+          <div class="menu-hold" data-aos="fade-up">
+            <div class="menu-container" data-aos="fade-up">
+              <div class="menu-img7" data-aos="fade-up">&nbsp;</div>
+              <h1 class="menu-title" data-aos="fade-up">Joe de Camarão</h1>
+              <p class="menu-p" data-aos="fade-up">
                 Bolinho de arroz envolto por fatia de peixe e com um camarão ao
                 seu topo.
               </p>
-              <h3 class="price">$23</h3>
+              <h3 class="price" data-aos="fade-up">$23</h3>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <div id="contact-background">
+    <div id="contact-background" data-aos="fade-right">
       <h1 class="contato">Contato</h1>
       <h2 class="contato2">entre em contato conosco</h2>
 
-      <a href="mailto:banzeinga2@outlook.com"
-          target="_blank"
+      <a href="mailto:banzeinga2@outlook.com" target="_blank"
         ><img class="gmail" src="img/gmail.png"
       /></a>
-      <a href="https://www.instagram.com/banze_sushi/"
-          target="_blank"
+      <a href="https://www.instagram.com/banze_sushi/" target="_blank"
         ><img class="insta" src="img/instagram.png"
       /></a>
-      <a
-        href="https://wa.me/5521960152622"
-          target="_blank"
+      <a href="https://wa.me/5521960152622" target="_blank"
         ><img class="face" src="img/whatsapp.png"
       /></a>
     </div>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1000,
+        once: true,
+      });
+    </script>
   </body>
 </html>
